--- a/src/main/resources/templates/successfulUpload.html
+++ b/src/main/resources/templates/successfulUpload.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Successful Upload file</title>
+    <title>Successful Upload</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h1>File sent successfully!</h1>
-<p><a href="/uploadFile">Upload more</a></p>
-<p><a href="/searchUser">Find user</a></p>
-<p><a href="/user">Enter new user</a></p>
+<h1>File upload successfully.</h1>
+<p><input type="button" onclick="window.location.href ='/upload'" value="Upload another file"/></p>
+<p><input type="button" onclick="window.location.href ='/user'" value="Enter new user"/></p>
+<p><input type="button" onclick="window.location.href ='/searchUser'" value="Find user"/></p>
 </body>
 </html>
